kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-node-app
  labels:
    app: devsu-node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-node-app
  template:
    metadata:
      labels:
        app: devsu-node-app
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: devsu-node-app
        image: ghcr.io/robertnpa/devsu-node-app:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
