kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devsu-node-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsu-node-app-service
            port:
              number: 80
